--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,35 @@ body {
   font-weight: bold;
   src:  url('/police/DMSerifDisplay-Regular.ttf') format('truetype');
 }
+
+
+#overlay {
+  background-image: url("/img/samuelPic.jpg");
+  background-size: cover;
+  background-position: top;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fffaf4;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Place les éléments en haut et en bas */
+  align-items: center;
+  opacity: 1;
+  transition: opacity 0.5s;
+  z-index: 2000;
+  padding: 30px 0;
+}
+
+#overlay.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
