--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ body {
 }
 /* Appliquer l'image de fond */
 #overlay {
-  background-image: url("/img/samuelPic.jpg");
+  background-image: url("/img/seferTorah.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
