--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,9 @@ body {
 }
 /* Appliquer l'image de fond */
 #overlay {
-  background-image: url("/img/seferTorah.jpeg");
+  background-image: url("/img/seferTorah.jpeg"), /* Ton image de fond */
+  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)); /* Dégradé transparent sombre */
+;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
