--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,8 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  width: 100vw;
-  height: 100vh; /* S'assure que chaque section prend tout l'écran */
-  background-size: cover;
+
+  background-size: auto;
   background-position: center;
 }
 
