--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  background-color: white;
   background-image: url('/img/background.jpg');
   background-size: cover;
 }
