--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,8 @@ body {
   justify-content: center;
   align-items: center;
   background-color: white;
-  background-image: url('/img/background.jpg');
-  background-size: cover;
+  /*background-image: url('/img/background.jpg');*/
+  /*background-size: cover;*/
 }
 
 /* Conteneur du formulaire */
