--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background-image: url('/img/background.jpg');
-  background-size: cover;
+  background-size: contain;
 }
 
 .image-section {
