--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,6 @@ body {
 }
 
 #overlay {
-  background-image: url("/img/samuelPic.jpg");
   background-size: cover;
   position: fixed;
   top: 0;
@@ -182,7 +181,7 @@ body {
 }
 /* Appliquer l'image de fond */
 #overlay {
-  background-image: url("/img/seferTorah.jpeg"), /* Ton image de fond */
+  background-image: url("/img/seferTorah.jpg"), /* Ton image de fond */
   linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)); /* Dégradé transparent sombre */
 ;
   background-size: cover;
